Fold: keep the log's order, and fence the whole ingest package (#238)
Whole-branch review, three Important findings and three minors. No fold rule
changed and no fixed point moved; this is the carrier, the fence and the tests.

Fold dropped the order it documents. Equivalences.standIns answers "in log
order" and returns an unmodifiable LinkedHashMap, but Fold's compact
constructor copied it with Map.copyOf, which randomises iteration per JVM - so
GraphProjector upserted a merge's stand-in nodes in a different order on every
boot and the record's own @param claim was false. Copied with LinkedHashMap and
LinkedHashSet instead, the way Equivalences copies its own fields.
FoldTest.shouldKeepLogOrderWhenTheFoldCarriesTheStandIns pins it against the
log-taking rule's own key set, order-sensitively; it was seen red on the first
fresh JVM under Map.copyOf, reporting ["Q10000000904", "Q10000000901"] where the
rule answers ["Q10000000901", "Q10000000904"]. EquivalencesTest.shouldIterateInLogOrder
already makes the same argument about canonicalByLocal.

theBootFoldsOnce could not see a helper. Scoped to GraphProjector alone, a new
package-private ingest class with a static method calling Equivalences.folding
and called from project() is a second whole-log fold at boot with the rule
green - planted and measured, exactly that. The rule now fences
com.robsartin.segue.ingest.. minus IngestService, whose claim() pre-append gate
folds on the live path where there is no boot fold to reuse. Three controls:
the helper plant fires (BootFoldHelper.fold -> Equivalences.folding), the
original plant fires (an extra Equivalences.in in project), and dropping the
IngestService exemption fires three times on refuseAClaimTheFoldCouldNotHold -
so the exemption is load-bearing rather than decorative. Every plant reverted;
git diff over src/main carries the Fold change alone. The rule's own javadoc
now names methods instead of IngestService.java line numbers, which go stale on
the next edit to a fi